added new models

--- a/ML-OPS/pipelines.ipynb
+++ b/ML-OPS/pipelines.ipynb
@@ -334,6 +334,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Batch-processing pipelines may be complex and have multiple steps and dependencies. Apache Airflow is one of the most popular open source frameworks for authoring, scheduling, and monitoring batch data pipelines.\n",
+    "\n",
+    "### Airflow was initially developed by Airbnb and is now maintained by the Apache Software Foundation. It provides a simple and easy-to-use interface for defining workflows as DAGs of tasks, where each task represents an individual processing step. The tasks can be written in Python and run in various environments, including locally, over Kubernetes, or in the cloud."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stream Processing\n",
+    "### Stream processing enables scalable, fault-tolerant, and real-time data processing. It is often used in applications that process large amounts of data in real time, such as real-time analytics, fraud detection, or recommendations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
