added new models

--- a/ML-OPS/pipelines.ipynb
+++ b/ML-OPS/pipelines.ipynb
@@ -345,7 +345,8 @@
    "metadata": {},
    "source": [
     "## Stream Processing\n",
-    "### Stream processing enables scalable, fault-tolerant, and real-time data processing. It is often used in applications that process large amounts of data in real time, such as real-time analytics, fraud detection, or recommendations."
+    "### Stream processing enables scalable, fault-tolerant, and real-time data processing. It is often used in applications that process large amounts of data in real time, such as real-time analytics, fraud detection, or recommendations.\n",
+    "### A typical scenario in stream processing is to aggregate values over time; for example, examining the total value of customer transactions in the last hour to detect fraud. It is not feasible to calculate the total for every new event with stream processing. It will take a considerable amount of time and memory. Instead, the values are grouped into windowed buckets, for example, six buckets or more, each holding the total per 10 minutes. The process sums the values of only the last six buckets and drops the oldest bucket every 10 minutes. Figure 4-14 illustrates overlapping sliding windows with a one-minute window duration and 30-second window periods."
    ]
   },
   {
