added new notes

--- a/ML-OPS/feature-store.ipynb
+++ b/ML-OPS/feature-store.ipynb
@@ -34,6 +34,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Feature stores are a factory and central repository for machine learning features. Feature stores handle the collection of raw data from various sources, the transformation pipeline, storage, cataloging, versioning, security, serving, and monitoring. They automate many processes described in this chapter, while accelerating production time and reducing engineering efforts. Feature stores form a shared catalog of production-ready features, enable collaboration and sharing between teams, and accelerate the innovation and delivery of new AI applications."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
