added new mdoels

--- a/ML-OPS/feature-store.ipynb
+++ b/ML-OPS/feature-store.ipynb
@@ -41,6 +41,25 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## The core components of a feature store are:\n",
+    "\n",
+    "### Transformation layer\n",
+    "- Converts raw offline or online data into features and stores them in both an online (key/value) and offline (object) store.\n",
+    "\n",
+    "### Storage layer\n",
+    "- Stores multiple versions of a feature in feature tables (feature sets) and manages the data lifecycle (create, append, delete, monitor, and secure the data). The data layer stores each feature in two forms: offline for training and analysis and online for serving and monitoring.\n",
+    "\n",
+    "### Feature retrieval\n",
+    "- Accepts requests for multiple features (feature vectors) and other properties (such as time ranges and event data), and produces an offline data snapshot for training or a real-time vector for serving.\n",
+    "\n",
+    "### Metadata management and cataloging\n",
+    "- Stores the feature definition, metadata, labels, and relations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
