added new models

--- a/ML-OPS/registry.ipynb
+++ b/ML-OPS/registry.ipynb
@@ -17,6 +17,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Therefore, it is better to package and deploy them as microservices (containers) and access them through an API. In addition, using an API allows independent scaling of the model (add/remove containers), high availability, granular security, and rolling upgrades."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
