added new changes

--- a/ML-OPS/registry.ipynb
+++ b/ML-OPS/registry.ipynb
@@ -24,6 +24,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### You can deploy and serve models through an online endpoint (using HTTP REST or gRPC protocols), which accepts the input dataset and either responds with the prediction immediately or through a streaming or messaging protocol; for example, Kafka, Kinesis, Pub/Sub, or others. The streaming or messaging protocol receives the input events, makes a prediction, and writes the results to a database or an upstream stream/queue.\n",
+    "\n",
+    "### You can deploy models as part of a batch pipeline. For example, the first step is to prepare the dataset. Then the model prediction step generates predictions from the incoming dataset and writes the results to the next step or a storage system. The batch pipeline can run on demand or be scheduled at regular intervals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
