added new models

--- a/ML-OPS/registry.ipynb
+++ b/ML-OPS/registry.ipynb
@@ -33,6 +33,28 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Online serving protocols support multiple operations to handle the entire model lifecycle, for example:\n",
+    "\n",
+    "### Predict\n",
+    "- Send an input dataset and return the predicted results.\n",
+    "\n",
+    "### Get model metadata\n",
+    "- Get information about the model and its schema.\n",
+    "\n",
+    "### Get health\n",
+    "- Get the health and readiness of the model.\n",
+    "\n",
+    "### List\n",
+    "- List the models and the versions served by the endpoint.\n",
+    "\n",
+    "### Explain\n",
+    "- Send the input data and return a description (explanation) of the prediction response."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
