added new models

--- a/ML-OPS/pipelines.ipynb
+++ b/ML-OPS/pipelines.ipynb
@@ -352,6 +352,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## AWS Step Functions\n",
+    "\n",
+    "### Step Functions has two workflow types. Standard workflows are ideal for long-running, auditable workflows, as they show execution history and visual debugging. Express workflows suit high-event-rate workloads like streaming data processing and IoT data ingestion.\n",
+    "\n",
+    "### The Express workflows can be either synchronous (wait until the workflow completes and then return the result) or asynchronous (don’t wait for the workflow to complete)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
