added new notes

--- a/ML-OPS/registry.ipynb
+++ b/ML-OPS/registry.ipynb
@@ -55,6 +55,29 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Monitoring Solutions can be broken into three main layers:\n",
+    "\n",
+    "### Resource monitoring\n",
+    "- Monitoring the resources (CPUs, GPUs, memory, storage) used by the the ML application, as well as their health and the service’s availability\n",
+    "\n",
+    "### Model and data monitoring\n",
+    "- Monitoring the performance of the model and the data used by the model (accuracy, drift, bias, data quality, and so on)\n",
+    "\n",
+    "### Application monitoring\n",
+    "- Monitoring the overall application performance (throughput, latency, errors, and so on) across all pipeline steps and measuring the business KPIs defined for the application"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Considering application-level monitoring ahead of the design and implementation is best since it requires custom instrumentation in multiple application junctions and ways to collect and use reference data for KPI measurements."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
