added new models

--- a/ML-OPS/feature-store.ipynb
+++ b/ML-OPS/feature-store.ipynb
@@ -60,6 +60,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Ingesting Data into the feature store\n",
+    "\n",
+    "### Direct ingestion\n",
+    "- Ingest the data directly from the client/notebook (interactively).\n",
+    "\n",
+    "### Batch/scheduled ingestion\n",
+    "- Create a service/job that ingests data from the source (for example, file, DB, and so on).\n",
+    "\n",
+    "### Real-time/streaming ingestion\n",
+    "- Create an online service that accepts real-time events (from a stream, HTTP, and so on) and pushes them into the feature store."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
