added new notes

--- a/Data-Science-Perspective/Algorithms/Alogirthms.ipynb
+++ b/Data-Science-Perspective/Algorithms/Alogirthms.ipynb
@@ -1,10 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Algorithms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linear regression algorithms\n",
+    "\n",
+    "### Linear regression algorithms are developed to solve regression problems by predicting continuous values based on independent inputs. They find wide applications in various practical scenarios, such as estimating product sales based on price or determining crop yield based on rainfall and fertilizer.\n",
+    "\n",
+    "### Linear regression utilizes a linear function of a set of coefficients and input variables to predict a scalar output."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
