added new models

--- a/Data-Science-Perspective/Algorithms/Alogirthms.ipynb
+++ b/Data-Science-Perspective/Algorithms/Alogirthms.ipynb
@@ -21,6 +21,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Logistic regression\n",
+    "\n",
+    "### Logistic regression is commonly employed for binary and multi-class classification tasks. It can predict the probability of an event occurring, such as whether a person will click on an advertisement or qualify for a loan. Logistic regression is a valuable tool in real-world scenarios where the outcome is binary and requires estimating the likelihood of a particular class. By utilizing a logistic function, this algorithm maps the input variables to a probability score, enabling effective classification decision-making."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
