added new notes

--- a/Data-Science-Perspective/Algorithms/Alogirthms.ipynb
+++ b/Data-Science-Perspective/Algorithms/Alogirthms.ipynb
@@ -55,6 +55,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Gradient boosting machine and XGBoost algorithms\n",
+    "\n",
+    "### Gradient boosting and XGBoost are also popular multi-tree-based ML algorithms used in various domains like credit scoring, fraud detection, and insurance claim prediction. Unlike random forests that combine results from weak learner trees at the end, gradient boosting sequentially aggregates results from different trees.\n",
+    "\n",
+    "### Random forests utilize parallel independent weak learners, while gradient boosting employs a sequential approach where each weak learner tree corrects the errors of the previous tree. Gradient boosting offers more hyperparameters to fine-tune and can achieve superior performance with proper tuning. It also allows for custom loss functions, providing flexibility in modeling real-world scenarios. Refer to the following figure for an illustration of how gradient boosting trees operate:\n",
+    "\n",
+    "### Gradient boosting offers several key advantages. Firstly, it excels in handling imbalanced datasets, making it highly suitable for tasks such as fraud detection and risk management. Secondly, it has the potential to achieve higher performance than other algorithms when properly tuned. Additionally, gradient boosting supports custom loss functions, providing flexibility in modeling real-world applications. Lastly, it can effectively capture complex relationships in the data and produce accurate predictions.\n",
+    "\n",
+    "### Gradient boosting, despite its advantages, also has some limitations to consider. Firstly, due to its sequential nature, it lacks parallelization capabilities, making it slower in training compared to algorithms that can be parallelized. Secondly, gradient boosting is sensitive to noisy data, including outliers, which can lead to overfitting and reduced generalization performance. Lastly, the complexity of gradient boosting models can make them less interpretable compared to simpler algorithms like decision trees, making it challenging to understand the underlying relationships in the data.\n",
+    "\n",
+    "### XGBoost, a widely-used implementation of gradient boosting, has gained popularity for its success in Kaggle competitions. While it shares the same underlying concept as gradient boosting, XGBoost offers several improvements. It enables training a single tree across multiple cores and CPUs, leading to faster training times. XGBoost incorporates powerful regularization techniques to mitigate overfitting and reduce model complexity. It also excels in handling sparse datasets. In addition to XGBoost, other popular variations of gradient boosting trees include LightGBM and CatBoost.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
