added new models

--- a/Data-Science-Perspective/Algorithms/Alogirthms.ipynb
+++ b/Data-Science-Perspective/Algorithms/Alogirthms.ipynb
@@ -72,6 +72,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## K-nearest neighbor algorithm\n",
+    "\n",
+    "\n",
+    "### K-nearest neighbor (K-NN) is a versatile algorithm used for both classification and regression tasks. It is also employed in search systems and recommendation systems. The underlying assumption of K-NN is that similar items tend to have close proximity to each other in the feature space. To determine this proximity, distances between different data points are measured, often using metrics like Euclidean distance.\n",
+    "\n",
+    "### In the case of classification, K-NN starts by loading the training data along with their respective class labels. When a new data point needs to be classified, its distances to the existing data points are calculated, typically using Euclidean distance. The K nearest neighbors to the new data point are identified, and their class labels are retrieved. The class label for the new data point is then determined through majority voting, where the most frequent class among the K nearest neighbors is assigned to the new data point."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
