added new models

--- a/Data-Science-Perspective/Algorithms/Alogirthms.ipynb
+++ b/Data-Science-Perspective/Algorithms/Alogirthms.ipynb
@@ -78,7 +78,13 @@
     "\n",
     "### K-nearest neighbor (K-NN) is a versatile algorithm used for both classification and regression tasks. It is also employed in search systems and recommendation systems. The underlying assumption of K-NN is that similar items tend to have close proximity to each other in the feature space. To determine this proximity, distances between different data points are measured, often using metrics like Euclidean distance.\n",
     "\n",
-    "### In the case of classification, K-NN starts by loading the training data along with their respective class labels. When a new data point needs to be classified, its distances to the existing data points are calculated, typically using Euclidean distance. The K nearest neighbors to the new data point are identified, and their class labels are retrieved. The class label for the new data point is then determined through majority voting, where the most frequent class among the K nearest neighbors is assigned to the new data point."
+    "### In the case of classification, K-NN starts by loading the training data along with their respective class labels. When a new data point needs to be classified, its distances to the existing data points are calculated, typically using Euclidean distance. The K nearest neighbors to the new data point are identified, and their class labels are retrieved. The class label for the new data point is then determined through majority voting, where the most frequent class among the K nearest neighbors is assigned to the new data point.\n",
+    "\n",
+    "### For regression tasks, K-NN follows a similar approach. The distances between the new data point and the existing data points are computed, and the K nearest neighbors are selected. The predicted scalar value for the new data point is obtained by averaging the values of the K closest data points.\n",
+    "\n",
+    "## Limitations:\n",
+    "\n",
+    "### As the number of data points increases, the complexity of the model grows, and predictions can become slower, especially with large datasets. K-NN is not suitable for high-dimensional datasets, as the concept of proximity becomes less meaningful in higher-dimensional spaces. The algorithm is also sensitive to noisy data and missing data, requiring outlier removal and data imputation techniques to handle such cases effectively."
    ]
   },
   {
