added new models

--- a/AWS/AWS.ipynb
+++ b/AWS/AWS.ipynb
@@ -11,6 +11,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Data source crawler: \n",
+    "- This functionality automatically examines data files within the data lake to infer their underlying structure, enabling efficient organization and categorization of the data.\n",
+    "### Data catalog creation and maintenance: \n",
+    "- AWS Lake Formation facilitates the creation and ongoing management of a data catalog, providing a centralized repository for metadata, enabling easy data discovery and exploration within the data lake.\n",
+    "### Data transformation processing: \n",
+    "- With built-in data transformation capabilities, the service allows for the processing and transformation of data stored in the data lake, enabling data scientists and analysts to work with refined and optimized datasets.\n",
+    "### Data security and access control: \n",
+    "- AWS Lake Formation ensures robust data security by providing comprehensive access control mechanisms and enabling fine-grained permissions management, ensuring that data is accessed only by authorized individuals and teams."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
