added new models

--- a/AWS/AWS.ipynb
+++ b/AWS/AWS.ipynb
@@ -25,6 +25,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## AWS Ingestion\n",
+    "\n",
+    "### AWS provides several services for data ingestion into a data lake on their platform. These services include Kinesis Data Streams, Kinesis Firehose, AWS Managed Streaming for Kafka, and AWS Glue Streaming, which cater to streaming data requirements. For batch ingestion, options such as AWS Glue, SFTP, and AWS Data Migration Service (DMS) are available. In the upcoming section, we will delve into the usage of Kinesis Firehose and AWS Glue to manage data ingestion processes for data lakes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
