added new notes

--- a/AWS/AWS.ipynb
+++ b/AWS/AWS.ipynb
@@ -34,6 +34,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Kinesis Firehose\n",
+    "\n",
+    "### Kinesis Firehose is a service that streamlines the process of loading streaming data into a data lake. It is a fully managed solution, meaning you don’t have to worry about managing the underlying infrastructure. Instead, you can interact with the service’s API to handle the ingestion, processing, and delivery of your data.\n",
+    "\n",
+    "### Kinesis Firehose provides comprehensive support for various scalable data ingestion requirements, including:\n",
+    "\n",
+    "- Seamless integration with diverse data sources such as websites, IoT devices, and video cameras. This is achieved using an ingestion agent or ingestion API.\n",
+    "- Versatility in delivering data to multiple destinations, including Amazon S3, Amazon Redshift (an AWS data warehouse service), Amazon OpenSearch (a managed search engine), and Splunk (a log aggregation and analysis product).\n",
+    "- Seamless integration with AWS Lambda and Kinesis Data Analytics, offering advanced data processing capabilities. With AWS Lambda, you can leverage serverless computing to execute custom functions written in languages like Python, Java, Node.js, Go, C#, and Ruby. For more comprehensive information on the functionality of Lambda, please refer to the official AWS documentation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
