added new models

--- a/AWS/AWS.ipynb
+++ b/AWS/AWS.ipynb
@@ -49,6 +49,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## AWS Glue\n",
+    "### AWS Glue is a comprehensive serverless ETL service that helps manage the data integration and ingestion process for data lakes. It seamlessly connects with various data sources, including transactional databases, data warehouses, and NoSQL databases, facilitating the movement of data to different destinations, such as Amazon S3. This movement can be scheduled or triggered by events. Additionally, AWS Glue offers the capability to process and transform data before delivering it to the target. It provides a range of processing options, such as the Python shell for executing Python scripts and Apache Spark for Spark-based data processing tasks. With AWS Glue, you can efficiently integrate and ingest data into your data lake, benefiting from its fully managed and serverless nature."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
