added new notes

--- a/AWS/AWS.ipynb
+++ b/AWS/AWS.ipynb
@@ -57,6 +57,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## AWS Lambda\n",
+    "### AWS Lambda is AWS’s serverless computing platform. It seamlessly integrates with various AWS services, including Amazon S3. By leveraging Lambda, you can trigger the execution of functions in response to events, such as the creation of a new file in S3. These Lambda functions can be developed to move data from different sources, such as copying data from a source S3 bucket to a target landing bucket in a data lake."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
