--- a/AWS/AWS.ipynb
+++ b/AWS/AWS.ipynb
@@ -59,7 +59,9 @@
    "metadata": {},
    "source": [
     "## AWS Lambda\n",
-    "### AWS Lambda is AWS’s serverless computing platform. It seamlessly integrates with various AWS services, including Amazon S3. By leveraging Lambda, you can trigger the execution of functions in response to events, such as the creation of a new file in S3. These Lambda functions can be developed to move data from different sources, such as copying data from a source S3 bucket to a target landing bucket in a data lake."
+    "### AWS Lambda is AWS’s serverless computing platform. It seamlessly integrates with various AWS services, including Amazon S3. By leveraging Lambda, you can trigger the execution of functions in response to events, such as the creation of a new file in S3. These Lambda functions can be developed to move data from different sources, such as copying data from a source S3 bucket to a target landing bucket in a data lake.\n",
+    "\n",
+    "### It’s important to note that AWS Lambda is not specifically designed for large-scale data movement or processing tasks, due to limitations such as memory size and maximum execution time allowed. However, for simpler data ingestion and processing jobs, it proves to be a highly efficient tool."
    ]
   },
   {
