added new models

--- a/AWS/AWS.ipynb
+++ b/AWS/AWS.ipynb
@@ -67,6 +67,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## AWS Glue Data Catalog\n",
+    "\n",
+    "### Automated data discovery: AWS Glue provides automated data discovery capabilities. By using data crawlers, Glue can scan and analyze data from diverse structured and semi-structured sources such as Amazon S3, relational databases, NoSQL databases, and more. It identifies metadata information, including table schemas, column names, and data types, that is stored in the AWS Glue Data Catalog.\n",
+    "### Centralized metadata repository: The AWS Glue Data Catalog serves as a centralized metadata repository for your data assets. It provides a unified view of your data, making it easier to search, query, and understand the available datasets.\n",
+    "### Metadata management: AWS Glue allows you to manage and maintain metadata associated with your data assets. You can define custom tags, add descriptions, and organize your data using databases, tables, and partitions within the Data Catalog."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
