--- a/AWS/AWS.ipynb
+++ b/AWS/AWS.ipynb
@@ -78,6 +78,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## AWS Lamabda\n",
+    "\n",
+    "### At a high level, AWS Lambda triggers are used to populate DynamoDB tables with object names and metadata when those objects are put into S3; Amazon OpenSearch Service is used to search for specific assets, related metadata, and data classifications."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
