added new models

--- a/AWS/AWS.ipynb
+++ b/AWS/AWS.ipynb
@@ -79,9 +79,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## AWS Lamabda\n",
+    "## AWS Lambda\n",
     "\n",
     "### At a high level, AWS Lambda triggers are used to populate DynamoDB tables with object names and metadata when those objects are put into S3; Amazon OpenSearch Service is used to search for specific assets, related metadata, and data classifications."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now, let’s examine a selection of AWS services that offer data processing capabilities within a data lake architecture:\n",
+    "\n",
+    "- AWS Glue ETL: In addition to supporting data movement and data catalogs, the ETL features of AWS Glue can be used for ETL and general-purpose data processing. AWS Glue ETL provides several built-in functions for data transformation, such as dropping the NULL field (the NULL field represents new data) and data filtering. It also provides general processing frameworks for Python and Spark to run Python scripts and Spark jobs. Glue ETL works natively with the AWS Glue Data Catalog to access the databases and tables in the catalog. Glue ETL can also access the Amazon S3 storage directly.\n",
+    "\n",
+    "- Amazon Elastic MapReduce (EMR): Amazon EMR is a fully managed big data processing platform on AWS. It is designed for large-scale data processing using the Spark framework and other Apache tools, such as Apache Hive, Apache Hudi, and Presto. It integrates with the Glue Data Catalog and Lake Formation natively to access databases and tables in Lake Formation.\n",
+    "\n",
+    "- AWS Lambda: AWS Lambda can be used for lightweight data processing tasks or as part of a larger data processing pipeline within the data lake architecture. Lambda can be triggered by real-time events, so it is a good option for real-time data processing."
    ]
   },
   {
