added new notes

--- a/AWS/AWS.ipynb
+++ b/AWS/AWS.ipynb
@@ -100,6 +100,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Versioned S3 buckets\n",
+    "### Amazon S3 offers versioning support for S3 buckets, which can be leveraged to manage different versions of training datasets when enabled. With this approach, each newly created or updated dataset is assigned a unique version ID at the S3 object level. Additionally, it is recommended to utilize a database to store all relevant metadata associated with each version of the training dataset. This enables the establishment of lineage, tracking the journey from data processing to ML model training. The metadata should capture essential information to facilitate comprehensive tracking and analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
