added new models

--- a/Deep-Learning/ANN.ipynb
+++ b/Deep-Learning/ANN.ipynb
@@ -33,6 +33,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### In feedforward propagation, we connected the input layer to the hidden layer, which then was connected to the output layer. In the first iteration, we initialized weights randomly and then calculated the loss resulting from those weight values. In backpropagation, we take the reverse approach. We start with the loss value obtained in feedforward propagation and update the weights of the network in such a way that the loss value is minimized as much as possible."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
