--- a/Pytorch/pytorch.ipynb
+++ b/Pytorch/pytorch.ipynb
@@ -104,6 +104,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tr_images = fmnist.data\n",
+    "tr_targets = fmnist.targets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tr_images & tr_targets:\n",
+      "\tX -torch.Size([60000, 28, 28])\n",
+      "\tY -torch.Size([60000])\n",
+      "\tY-Unique Values : tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+      "TASK:\n",
+      "\t10 class Classification\n",
+      "UNIQUE CLASSES:\n",
+      "\t['T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat', 'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle boot']\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_values = tr_targets.unique()\n",
+    "print(f'tr_images & tr_targets:\\n\\tX -{tr_images.shape}\\n\\tY \\\n",
+    "-{tr_targets.shape}\\n\\tY-Unique Values : {unique_values}')\n",
+    "print(f'TASK:\\n\\t{len(unique_values)} class Classification')\n",
+    "print(f'UNIQUE CLASSES:\\n\\t{fmnist.classes}') "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
