added new models

--- a/Pytorch/pytorch.ipynb
+++ b/Pytorch/pytorch.ipynb
@@ -182,19 +182,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "from torchvision import datasets\n",
+    "data_folder = '~/data/FMNIST' # This can be any directory you \n",
+    "# want to download FMNIST to\n",
+    "fmnist = datasets.FashionMNIST(data_folder, download=True, \\\n",
+    "                                                  train=True)\n",
+    "tr_images = fmnist.data\n",
+    "tr_targets = fmnist.targets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
