--- a/Pytorch/pytorch.ipynb
+++ b/Pytorch/pytorch.ipynb
@@ -204,10 +204,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class FMNISTDataset(Dataset):\n",
+    "    def __init__(self, x, y):\n",
+    "        x = x.float()\n",
+    "        x = x.view(-1,28*28)\n",
+    "        self.x, self.y = x, y \n",
+    "    def __getitem__(self, ix):\n",
+    "        x, y = self.x[ix], self.y[ix] \n",
+    "        return x.to(device), y.to(device)\n",
+    "    def __len__(self): \n",
+    "        return len(self.x)"
+   ]
   }
  ],
  "metadata": {
